src/components/Layout/Layout.styl
@require 'objects/layouts.styl'
@require 'settings/breakpoints'
@require '~styles/variables.styl'

.c-layout
    @extend    $app-2panes-sticky

    // To move to Cozy-UI
    +medium-screen()
        display block

        // Those pseudo-elements are "ghost" elements replacing bar and nav
        &:before
        &:after
            content ''
            display block
            height 3rem

        > aside
            position fixed
            bottom 0
            left 0
            display block
            z-index $nav-index

html
body
    +medium-screen()
        display block
        height auto
        overflow auto
        overflow-x hidden
// END Cozy-UI

// To move to Cozy-bar
// Double the selector to increase specificity since
// media queries do not increase specificity and we want
// to override the position: relative
[role=banner][role=banner]
    +small-screen()
        position fixed
        top 0
        left 0
        width 100%
        background-color white
// END Cozy-Bar

.c-content
    width 100%
    padding content-padding

    +small-screen()
        &
            padding content-padding-small

    +medium-screen()
        display block

